--- a/css/style.css
+++ b/css/style.css
@@ -50,11 +50,51 @@ nav {
 }
 
 .bio-box {
-  background-color: rgb(71, 178, 255);
+  background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
   z-index: -1;
   padding: 100px 100px 100px 100px;
   display: flex;
   justify-content: space-between;
+}
+
+@-webkit-keyframes Gradient {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
+}
+
+@-moz-keyframes Gradient {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
 }
 
 .bio-text {
@@ -150,36 +190,43 @@ nav {
 
 .title-wrapper {
   position: relative;
+  text-align: center;
+  width: 250px;
+  margin: auto;
+}
+
+.projects-background {
+  position: relative;
 }
 
 .section-title {
   color: #616161;
-  margin: 60px 40px 20px 40px;
-  padding-left: 30px;
+  margin-top: 60px;
+  margin-bottom: 20px;
+  text-align: center;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 500;
-  font-size: 36px;
+  font-size: 48px;
 }
 
 .section-number {
   position: absolute;
   top: -15px;
-  left: 50px;
-  height: 60px;
+  left: 10px;
+  height: 70px;
   z-index: -1;
 }
 
 .about-wrapper {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .about {
-  max-width: 50%;
+  max-width: 60%;
   display: flex;
   justify-content: space-around;
-  padding: 20px 80px 20px 80px;
-  max-width: 50%;
+  padding: 20px 0px 20px 0px;
 }
 
 #about-image {
@@ -192,6 +239,8 @@ nav {
   font-family: 'Fira Sans', sans-serif;
   font-weight: 300;
   font-size: 18px;
+  max-width: 500px;
+  padding-left: 30px;
 }
 
 #about-outdoor {
@@ -221,12 +270,13 @@ nav {
   background-color: rgb(71, 178, 255);
   color: white;
   padding: 15px;
-  margin: 10px 10px 10px 10px;
+  margin: 0px 10px 0px 10px;
   font-family: 'Fira Sans', sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 18px;
-  border-radius: 30px;
-  max-width: 80px;
+  border-radius: 70px;
+  width: 70px;
+  height: 70px;
   text-align: center;
 }
 
@@ -238,43 +288,45 @@ nav {
 
 .project-wrapper {
   position: relative;
-  margin-bottom: 100px;
+  display: flex;
+  margin: auto;
 }
 
 .large-project-card {
   background-color: #f0f0f0;
   padding: 50px 50px 50px 50px;
-  width: 70%;
+  width: 60%;
   margin: 50px 0px 50px 0px;
 }
 
-.project-background#left {
-  width: 75%;
+/* .project-background#left {
+  width: 70%;
   height: 100%;
   background-color: rgb(71, 178, 255);
   z-index: -1;
   position: absolute;
   top: 50px;
-  left: -50px;
+  left: 0px;
 }
 
 .project-background#right {
-  width: 75%;
+  width: 70%;
   height: 100%;
   background-color: rgb(71, 178, 255);
   z-index: -1;
   position: absolute;
   top: 50px;
   left: 165px;
-}
+} */
 
 #left-project {
-  margin-left: 10%;
+  justify-content: flex-start;
+  padding-left: 20%;
 }
 
 #right-project {
-  margin-left: auto;
-  margin-right: 10%;
+  justify-content: flex-end;
+  padding-right: 20%;
 }
 
 .project-card-header {
@@ -315,7 +367,7 @@ nav {
   text-align: center;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 16px;
   color: white;
 }
 
@@ -364,7 +416,19 @@ nav {
   font-family: 'Fira Sans', sans-serif;
   font-weight: 300;
   font-size: 18px;
-  width: 50%;
+  width: 60%;
+}
+
+.project-photo {
+  width: 40%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-img {
+  width: 200px;
 }
 
 .project-link {
@@ -406,7 +470,7 @@ nav {
 
 .small-project-card {
   background-color: #f0f0f0;
-  margin: 0px 25px 25px 50px;
+  margin: 25px 25px 25px 50px;
   width: 300px;
   height: 300px;
   padding: 20px;
