--- a/css/style.css
+++ b/css/style.css
@@ -449,8 +449,39 @@ nav {
 .other-projects {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: space-around;
   padding: 0px 150px 0px 125px;
+}
+
+.small-project-card {
+  background-color: white;
+  background-size: contain;
+  margin: 25px 25px 25px 50px;
+  width: 300px;
+  height: 300px;
+  transition: opacity 0.3s;
+  position: relative;
+}
+
+.background-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: #000;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.small-project-card:hover>.background-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: #000;
+  opacity: 0.5;
+}
+
+.small-project-card:hover>.small-text-wrapper {
+  opacity: 1;
 }
 
 .small-text-wrapper {
@@ -458,26 +489,17 @@ nav {
   width: 100%;
   height: 100%;
   opacity: 0;
-}
-
-.small-text-wrapper:hover {
-  opacity: 1;
+  margin: 0px;
 }
 
 .small-text {
-  transform: translate(0%, 50%);
-}
-
-.small-project-card {
-  background-color: #f0f0f0;
-  margin: 25px 25px 25px 50px;
-  width: 300px;
-  height: 300px;
-  padding: 20px;
+  transform: translate(0%, 20%);
+  height: 100%;
+  padding: 0px 20px 0px 20px;
 }
 
 .small-title {
-  color: #616161;
+  color: white;
   margin: 0px;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 400;
@@ -485,7 +507,7 @@ nav {
 }
 
 .small-role {
-  color: #616161;
+  color: white;
   margin-top: 10px;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 300;
