--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ nav {
 .large-project-card {
   background-color: #f0f0f0;
   padding: 50px 50px 50px 50px;
-  width: 60%;
+  width: 70%;
   margin: 50px 0px 50px 0px;
 }
 
@@ -450,17 +450,18 @@ nav {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  padding: 0px 150px 0px 125px;
+  padding: 0px 10% 0px 10%
 }
 
 .small-project-card {
   background-color: white;
   background-size: contain;
-  margin: 25px 25px 25px 50px;
+  margin: 50px 25px 50px 25px;
   width: 300px;
   height: 300px;
   transition: opacity 0.3s;
   position: relative;
+  cursor: pointer;
 }
 
 .background-overlay {
@@ -538,4 +539,24 @@ nav {
   font-size: 14px;
   max-height: 100px;
   overflow: hidden;
+}
+
+.coming-soon {
+  color: #616161;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 300;
+  font-size: 32px;
+  text-align: center;
+  padding: 50px;
+}
+
+.footer {
+  background-color: rgb(71, 178, 255);
+  color: white;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  text-align: center;
+  padding: 20px;
+  margin: 0px;
 }
