updated unmasked section

--- a/css/project.css
+++ b/css/project.css
@@ -40,6 +40,16 @@
   text-align: center;
 }
 
+.page-team {
+  color: white;
+  margin: 0px;
+  margin-top: 10px;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 300;
+  font-size: 24px;
+  text-align: center;
+}
+
 .page-tagline {
   color: white;
   font-family: 'Fira Sans', sans-serif;
@@ -106,6 +116,14 @@
   transform: skew(8deg) rotate(3deg);
 }
 
+.images-collage {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+  width: 80%;
+  margin: auto;
+}
+
 .main-item {
   width: 800px !important;
   height: 500px !important;
@@ -119,6 +137,44 @@
 .hifi-item {
   width: 700px !important;
   height: 512px !important;
+}
+
+.lofi-mobile-item {
+  width: 175px !important;
+  height: 307px !important;
+  margin: 20px;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+
+.lofi-mobile-item:after {
+  right: 10px;
+  left: auto;
+  -webkit-transform: skew(8deg) rotate(3deg);
+  -moz-transform: skew(8deg) rotate(3deg);
+  -ms-transform: skew(8deg) rotate(3deg);
+  -o-transform: skew(8deg) rotate(3deg);
+  transform: skew(8deg) rotate(3deg);
+}
+
+.hifi-mobile-item {
+  width: 219px !important;
+  height: 384px !important;
+  margin: 20px;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+
+.hifi-mobile-item:after {
+  right: 10px;
+  left: auto;
+  -webkit-transform: skew(8deg) rotate(3deg);
+  -moz-transform: skew(8deg) rotate(3deg);
+  -ms-transform: skew(8deg) rotate(3deg);
+  -o-transform: skew(8deg) rotate(3deg);
+  transform: skew(8deg) rotate(3deg);
 }
 
 .iphone-item {
@@ -172,7 +228,7 @@
   color: #616161;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 400;
-  font-size: 24px;
+  font-size: 20px;
   margin: 50px 150px 50px 150px;
 }
 
@@ -180,7 +236,7 @@
   color: #323232;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 500;
-  font-size: 40px;
+  font-size: 30px;
   margin: 50px 150px 50px 150px;
 }
 
@@ -193,13 +249,17 @@
   color: #323232;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 400;
-  font-size: 24px;
+  font-size: 20px;
 }
 
 .large-gif-container {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+#chart-analysis {
+  max-widthL
 }
 
 .large-gif {
@@ -240,37 +300,22 @@
   transform: skew(8deg) rotate(3deg);
 }
 
+.gallery-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
 .images-gallery {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-}
-
-.gallery-img {
-  width: 300px;
-  height: 400px;
-  margin: 0px 30px 0px 30px;
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
   -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 
-.gallery-img:before, .gallery-img:after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-  -moz-box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
-  top: 50%;
-  bottom: 0;
-  left: 10px;
-  right: 10px;
-  -moz-border-radius: 100px / 10px;
-  border-radius: 100px / 10px;
-}
-
-.gallery-img:after {
+.images-gallery:after {
   right: 10px;
   left: auto;
   -webkit-transform: skew(8deg) rotate(3deg);
@@ -278,6 +323,12 @@
   -ms-transform: skew(8deg) rotate(3deg);
   -o-transform: skew(8deg) rotate(3deg);
   transform: skew(8deg) rotate(3deg);
+}
+
+.gallery-img {
+  width: 300px;
+  height: 400px;
+  margin: 0px 10px 0px 10px;
 }
 
 #gallery-portrait-img {
@@ -289,7 +340,7 @@
 }
 
 #phone {
-  margin-top: 50px;
+  margin-top: 10px;
   width: 292px !important;
   height: 512px !important;
 }
