added small projects for first three

--- a/css/micromodal.css
+++ b/css/micromodal.css
@@ -16,22 +16,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 100;
 }
 
 .modal__container {
   background-color: #fff;
-  padding: 30px;
-  max-width: 500px;
-  max-height: 100vh;
   border-radius: 4px;
   overflow-y: auto;
   box-sizing: border-box;
 }
 
 .modal__header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  text-align: center;
+  position: relative;
+  background-color: rgb(71, 178, 255);
+  padding: 30px;
 }
 
 .modal__title {
@@ -46,18 +45,95 @@
 
 .modal__close {
   background: transparent;
-  border: 0;
+  position: absolute;
+  border: none;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  color: white;
+  font-size: 24px;
 }
 
-.modal__header .modal__close:before {
-  content: "\2715";
+.modal__close:focus {
+  outline: 0;
 }
 
 .modal__content {
-  margin-top: 2rem;
+  margin-top: 10px;
   margin-bottom: 2rem;
   line-height: 1.5;
   color: rgba(0, 0, 0, .8);
+}
+
+.modal__container {
+  width: 60%;
+  height: 85%;
+  overflow: hidden;
+}
+
+.modal-title {
+  color: white;
+  margin: 0px;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 400;
+  font-size: 60px;
+  text-align: center;
+}
+
+.modal-role {
+  color: white;
+  margin-top: 10px;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 300;
+  font-size: 24px;
+  text-align: center;
+}
+
+.modal-description {
+  margin-top: 20px;
+  color: #616161;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  text-align: center;
+  padding: 0px 30px 0px 30px;
+}
+
+.modal-small-link {
+  color: #616161;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  transition: color 0.3s;
+  text-align: center;
+  text-decoration: none;
+}
+
+.modal-small-link:hover {
+  color: rgb(47, 47, 47);
+}
+
+.modal-image-container {
+  display: flex;
+  justify-content: center;
+}
+
+.modal-image {
+  margin-top: 20px;
+  width: 712px;
+  height: 399px
+}
+
+#macbook {
+  margin-top: 0px;
+  width: 700px;
+  height: 525px;
+}
+
+.modal-video {
+  margin-top: 10px;
+  width: 769px;
+  height: 432px
 }
 
 /**************************\
@@ -96,7 +172,7 @@
     transform: translateY(0);
   }
   to {
-    transform: translateY(-10%);
+    transform: translateY(10%);
   }
 }
 
