--- a/css/micromodal.css
+++ b/css/micromodal.css
@@ -67,7 +67,7 @@
 
 .modal__container {
   width: 60%;
-  height: 85%;
+  height: 80%;
   overflow: hidden;
 }
 
@@ -130,8 +130,26 @@
   height: 525px;
 }
 
+#sq {
+  padding: 0px 20px 0px 20px;
+  width: 400px;
+  height: 400px;
+}
+
+#iphone {
+  margin-top: -10px;
+  width: 292px;
+  height: 512px;
+}
+
+#page {
+  width: 307px !important;
+  height: 406px !important;
+  padding: 30px 5px 0px 5px;
+}
+
 .modal-video {
-  margin-top: 10px;
+  margin-top: 20px;
   width: 769px;
   height: 432px
 }
