added pointers to prev/next main proj

--- a/css/project.css
+++ b/css/project.css
@@ -341,3 +341,21 @@
   width: 292px !important;
   height: 512px !important;
 }
+
+.next-links-container {
+  text-align: center;
+}
+
+.next-link {
+  color: #8c8c8c;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  margin: 0px 100px 30px 100px;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.next-link:hover {
+  color: rgb(32, 32, 32);
+}
