--- a/css/micromodal.css
+++ b/css/micromodal.css
@@ -105,11 +105,16 @@
   font-size: 16px;
   transition: color 0.3s;
   text-align: center;
+  display: inline-block;
   text-decoration: none;
+  transition: transform 0.3s ease-out !important;
 }
+
+
 
 .modal-small-link:hover {
   color: rgb(47, 47, 47);
+  transform: translate(0, -1px) !important;
 }
 
 .modal-image-container {
