--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ nav {
 }
 
 .large-project-card:hover {
-  transform: translate(0, -8px) !important;
+  transform: scale(1.025, 1.025) !important;
 }
 
 /* .project-background#left {
