--- a/css/style.css
+++ b/css/style.css
@@ -634,15 +634,62 @@ nav {
   padding: 50px;
 }
 
-.adventure-text {
-  padding-left: 100px;
+.adventures-section {
+  margin: 40px 0px;
 }
+.adventure-wrapper {
+  padding: 0 20px;
+}
+
+.adventure-container {
+  position: relative;
+  max-width: 85%;
+  padding: 0 5%;
+  margin: auto;
+}
+
+.adventure-container:after {
+  content:"";
+  background: rgb(224, 224, 224);
+  position: absolute;
+  top: 5px;
+  left: 0;
+  height: 100%;
+  width: 4px;
+}
+
+.adventure-text {
+  padding: 20px 0px;
+}
+
+.adventure-text:after {
+  content:"";
+  background: rgb(71, 178, 255);
+  position: absolute;
+  top: 28px;
+  left: -8px;
+  height: 20px;
+  width: 20px;
+  border-radius: 20px;
+  z-index: 2;
+}
+
+#first-text {
+  padding-top: 0px !important;
+}
+
+#first-text:after {
+  top: 5px;
+  height: 21px;
+  width: 21px;
+  border-radius: 21px;
+}
+
 .adventure-title {
   color: #616161;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 400;
   font-size: 32px;
-  padding-top: 30px;
 }
 
 .adventure-sub {
@@ -654,31 +701,28 @@ nav {
 }
 
 .adventure-photos {
-  margin: 30px;
   display: flex;
-  justify-content: space-around;
-  flex-flow: row wrap;
+  flex-flow: wrap;
+  margin: auto;
+  max-width: 100%;
 }
 
-.landscape-photo > img {
-  width: 450px;
-  margin: 10px 0px 10px 0px;
+.adventure-column {
+  flex: 100%;
+  max-width: 50%;
+}
+
+.adventure-column img {
+  margin: 10px 0px;
+  max-width: 95%;
+  vertical-align: middle;
   transition: transform 0.3s ease-out !important
 }
 
-.landscape-photo > img:hover {
+.adventure-column img:hover {
   transform: scale(1.025, 1.025) !important;
 }
 
-.portrait-photo > img {
-  height: 450px;
-  margin: 10px 0px 10px 0px;
-  transition: transform 0.3s ease-out !important
-}
-
-.portrait-photo > img:hover {
-  transform: scale(1.025, 1.025) !important;
-}
 .footer {
   background-color: rgb(71, 178, 255);
   color: white;
