--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,10 @@ nav {
   border-radius: 10px;
 }
 
+#seabird {
+  border: 2px solid rgb(232, 232, 232);
+}
+
 .small-project-card:hover>.background-overlay {
   width: 100%;
   height: 100%;
@@ -578,7 +582,7 @@ nav {
 
 .small-text {
   transform: translate(0%, 20%);
-  height: 100%;
+  height: 80%;
   padding: 0px 20px 0px 20px;
 }
 
@@ -635,10 +639,12 @@ nav {
 }
 
 .adventures-section {
-  margin: 40px 0px;
+  margin: 60px 0px;
 }
+
 .adventure-wrapper {
   padding: 0 20px;
+  position: relative;
 }
 
 .adventure-container {
@@ -658,21 +664,37 @@ nav {
   width: 4px;
 }
 
+#first-container:after {
+  top: -40px;
+  height: 120%;
+}
+
 .adventure-text {
   padding: 20px 0px;
+  padding-top: 50px;
 }
 
 .adventure-text:after {
   content:"";
   background: rgb(71, 178, 255);
   position: absolute;
-  top: 28px;
-  left: -8px;
-  height: 20px;
-  width: 20px;
-  border-radius: 20px;
-  z-index: 2;
+  top: 58px;
+  left: -9px;
+  height: 22px;
+  width: 22px;
+  border-radius: 22px;
+  z-index: 1;
 }
+
+.hidden-overlay {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background-image: linear-gradient(to bottom, white, transparent);
+}
+
 
 #first-text {
   padding-top: 0px !important;
