--- a/css/style.css
+++ b/css/style.css
@@ -692,9 +692,10 @@ nav {
   left: 0;
   width: 100%;
   height: 40px;
-  background-image: linear-gradient(to bottom, white, transparent);
+  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
-
 
 #first-text {
   padding-top: 0px !important;
