--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ nav {
   background-position: white;
 }
 
+
+.nav-up {
+  top: -61px;
+}
+
 #nav-logo {
   max-width: 40px;
 }
@@ -755,4 +760,204 @@ nav {
   text-align: center;
   padding: 20px;
   margin: 0px;
+}
+
+@media only screen and (max-width: 640px) {
+  body {
+  }
+
+  .bio-box {
+    padding: 80px 20px 10px 20px;
+  }
+
+  .bio-text{
+    width: 100%;
+  }
+
+  #bio-intro {
+    font-size: 60px;
+  }
+
+  #bio-description {
+    font-size: 30px;
+  }
+
+  #resume-button {
+    margin: auto;
+    margin-top: 30px;
+  }
+
+
+  .bio-box-wrapper {
+    padding: 20px;
+    flex-flow: column;
+  }
+
+  .contact-wrapper {
+    display: flex;
+    justify-content: space-around;
+    flex-flow: row;
+    padding-top: 20px;
+  }
+
+  .contact-link {
+    padding: 10px;
+  }
+  nav {
+    position: fixed;
+    background-color: white;
+    z-index: 2;
+    border-bottom: 2px solid #e4e4e4;
+  }
+
+  .navbar {
+    width: 100%;
+    display: flex;
+    padding: 0px;
+    justify-content: space-around;
+    list-style: none;
+    z-index: 1;
+    margin: auto;
+    background-position: white;
+  }
+
+
+  #nav-logo {
+    max-width: 40px;
+  }
+
+  .navbar-item {
+    margin: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .navbar-item-logo {
+    position: relative;
+    margin: auto;
+    top: 0px;
+    left: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .navbar-heading {
+    display: inline-block;
+    text-decoration: none;
+    color: #8c8c8c;
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 18px;
+    cursor: pointer;
+    transition: color 0.3s, transform 0.3s !important;
+  }
+
+  .navbar-heading:hover {
+    color: rgb(32, 32, 32);
+    transform: translate(0, -2px) !important;
+  }
+
+  .about {
+    justify-content: center;
+    flex-flow: column wrap;
+    margin: auto;
+    padding: 20px 30px 0px 30px;
+  }
+
+  #about-image {
+    margin: auto;
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  #about-outdoor {
+    width: 50%;
+  }
+  #about-text {
+    padding-left: 0px;
+    margin: auto;
+  }
+
+  .project-wrapper {
+    padding-bottom: 0;
+  }
+  .large-project-card {
+    padding: 25px;
+  }
+
+  .project-card-header {
+    flex-flow: row wrap;
+  }
+
+  .project-card-content {
+    margin-top: 20px;
+    justify-content: center;
+    flex-flow: row wrap-reverse;
+  }
+
+  .project-role {
+    margin-bottom: 10px;
+  }
+
+  .project-keys {
+    width: 100%;
+  }
+  .keys-list {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .see-more-button {
+    margin: auto;
+    margin-bottom: 20px;
+  }
+
+  .project-description {
+    width: 100%;
+  }
+
+  .project-photo {
+    width: 100%;
+  }
+
+  .small-project-card {
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 0;
+  }
+
+  .small-text{
+    height: 70%;
+  }
+
+  .adventure-container {
+    padding-left: 30px;
+    margin: auto;
+  }
+
+  .adventure-text {
+    padding-top: 10px;
+  }
+
+  .adventure-column {
+    flex-flow: column;
+    max-width: 100%;
+  }
+
+  .adventure-text:after {
+    top: 18px;
+  }
+
+  #first-text:after {
+    top: 9px;
+  }
+
+  .footer {
+    font-size: 14px;
+  }
 }
