--- a/css/project.css
+++ b/css/project.css
@@ -388,6 +388,47 @@
   padding-top: 15px;
 }
 
+#identicon-gif {
+  height: 400px;
+  width: 400px;
+}
+
+.example-image {
+  margin-top: 20px;
+}
+
 #unmasked-demo-link {
   font-size: 20px;
+}
+
+
+#project-button {
+  border: 2px solid rgb(71, 178, 255);
+  border-radius: 10px;
+  width: 200px;
+  text-align: center;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-family: 'Fira Sans', sans-serif;
+  color: white;
+  background-color: rgb(71, 178, 255);
+  transition: transform 0.3s;
+}
+
+#project-button:hover {
+  transform: translate(0, -3px);
+}
+
+#prototype-link {
+  text-decoration: none;
+  color: white;
+  transition: color 0.3s;
+  margin: 0px;
+}
+
+
+#prototype-link > p {
+  margin: 0;
+  padding: 15px 0px;
 }
