--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,9 @@ body, html {
 nav {
   position: fixed;
   width: 100%;
-  background-color: white;
   z-index: 2;
   border-bottom: 2px solid #e4e4e4;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 .navbar {
