--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ nav {
   font-family: 'Fira Sans', sans-serif;
   font-weight: 300;
   font-size: 18px;
-  max-width: 500px;
+  max-width: 550px;
   padding-left: 30px;
 }
 
@@ -521,6 +521,20 @@ nav {
 
 #colorpeace{
   background: rgb(122, 126, 217);
+}
+
+#mastercard-logo {
+  max-width: 180px;
+  position: relative;
+  top: 10px;
+  margin: 0px 5px 0px -1px;
+}
+
+#microsoft-logo {
+  max-width: 150px;
+  top: 8px;
+  position: relative;
+  margin: 0px 0.5px 0px 3px;
 }
 
 
