--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,67 @@ nav {
   transition: color 0.3s, transform 0.3s !important;
 }
 
+#dropdown-btn {
+  cursor: default;
+}
+
+.dropdown-area:hover ~ #dropdown-btn {
+    color: rgb(32, 32, 32);
+    transform: translate(0, -2px) !important;
+}
+
+.dropdown-content:hover ~ #dropdown-btn {
+    color: rgb(32, 32, 32);
+    transform: translate(0, -2px) !important;
+}
+
 .navbar-heading:hover {
   color: rgb(32, 32, 32);
   transform: translate(0, -2px) !important;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 64px;
+  background-color: rgba(255, 255, 255, 0.9);
+  min-width: 160px;
+  border-left: 2px solid #e4e4e4;
+  border-bottom: 2px solid #e4e4e4;
+  border-right: 2px solid #e4e4e4;
+  box-shadow: 0px 8px 16px 0px rgba(60,60,60,0.1);
+  z-index: 1;
+}
+
+.dropdown-area {
+  display: none;
+  position: absolute;
+  top: 40px;
+  height: 50px;
+  width: 130px;
+}
+
+.dropdown:hover .dropdown-content{
+  display: block;
+}
+
+.dropdown-area:hover .dropdown-content{
+  display: block;
+}
+.dropdown:hover .dropdown-area{
+  display: block;
+}
+
+
+.dropdown-content a {
+  float: none;
+  color: #8c8c8c;
+  font-family: 'Fira Sans', sans-serif;
+  font-size: 18px;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
 
@@ -321,6 +379,28 @@ nav {
 .project-section {
   width: 100%;
 }
+.project-section-title {
+  color: #616161;
+  margin-top: 60px;
+  margin-left: 50px;
+  margin-bottom: -10px;
+  text-align: left;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 300;
+  font-size: 32px;
+  font-style: italic;
+}
+
+.project-hr {
+  margin-top: 20px;
+  border-top: 1px solid #616161;
+  width: 90%;
+
+}
+
+.stic-link {
+  text-decoration: none;
+}
 
 .project-wrapper {
   position: relative;
@@ -459,6 +539,10 @@ nav {
 
 #product {
   background-color: rgb(238, 177, 31);
+}
+
+#ar {
+  background-color: rgb(241, 93, 93);
 }
 
 #design-thinking {
@@ -626,6 +710,20 @@ nav {
   padding: 0px 20px 0px 20px;
 }
 
+.smallish-text {
+  transform: translate(0%, 20%);
+  height: 80%;
+  padding: 0px 16px 0px 16px;
+}
+
+.smaller-title {
+  color: white;
+  margin: 0px;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 400;
+  font-size: 32px;
+
+}
 .small-title {
   color: white;
   margin: 0px;
@@ -893,6 +991,8 @@ nav {
     color: rgb(32, 32, 32);
     transform: translate(0, -2px) !important;
   }
+
+
 
   .about {
     justify-content: center;
