--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body, html {
 }
 
 nav {
+  display: none;
   position: fixed;
   width: 100%;
   z-index: 2;
@@ -60,18 +61,15 @@ nav {
   transition: color 0.3s, transform 0.3s !important;
 }
 
-#dropdown-btn {
+.sub-heading {
+  padding-left: 30px !important;
+  font-size: 16px !important;
+}
+
+.portfolio {
   cursor: default;
-}
-
-.dropdown-area:hover ~ #dropdown-btn {
-    color: rgb(32, 32, 32);
-    transform: translate(0, -2px) !important;
-}
-
-.dropdown-content:hover ~ #dropdown-btn {
-    color: rgb(32, 32, 32);
-    transform: translate(0, -2px) !important;
+  transform: none !important;
+  font-style: italic;
 }
 
 .navbar-heading:hover {
@@ -82,7 +80,7 @@ nav {
 .dropdown-content {
   display: none;
   position: absolute;
-  top: 64px;
+  top: 62px;
   background-color: rgba(255, 255, 255, 0.9);
   min-width: 160px;
   border-left: 2px solid #e4e4e4;
@@ -92,6 +90,35 @@ nav {
   z-index: 1;
 }
 
+.side-bar-show {
+  left: 2% !important;
+}
+
+.side-bar {
+  position: fixed;
+  top: 20%;
+  left: -15%;
+  max-width: 200px;
+  /* border-left: 2px solid #e4e4e4;
+  border-bottom: 2px solid #e4e4e4;
+  border-right: 2px solid #e4e4e4;
+  box-shadow: 0px 8px 16px 0px rgba(60,60,60,0.1); */
+  z-index: 1;
+  transition: left 0.3s ease-in-out;
+}
+
+.side-bar a {
+  float: none;
+  color: #8c8c8c;
+  font-family: 'Fira Sans', sans-serif;
+  font-size: 18px;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+
 .dropdown-area {
   display: none;
   position: absolute;
@@ -100,7 +127,7 @@ nav {
   width: 130px;
 }
 
-.dropdown:hover .dropdown-content{
+/* .dropdown:hover .dropdown-content{
   display: block;
 }
 
@@ -109,7 +136,7 @@ nav {
 }
 .dropdown:hover .dropdown-area{
   display: block;
-}
+} */
 
 
 .dropdown-content a {
@@ -131,7 +158,7 @@ nav {
   -moz-animation: Gradient 15s ease infinite;
   animation: Gradient 15s ease infinite;
   z-index: -1;
-  padding: 100px 50px 50px 50px;
+  padding: 50px 50px 50px 50px;
   display: flex;
   justify-content: center;
 }
@@ -238,6 +265,10 @@ nav {
   font-family: 'Fira Sans', sans-serif;
   font-weight: 400;
   font-size: 18px;
+}
+
+#main-logo-sidebar {
+  padding: 10px 0px 0px 18px;
 }
 
 #bio-text {
@@ -885,10 +916,9 @@ nav {
 }
 
 .footer {
-  background-color: rgb(71, 178, 255);
-  color: white;
+  color: #8c8c8c;
   font-family: 'Fira Sans', sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 18px;
   text-align: center;
   padding: 20px;
@@ -896,8 +926,14 @@ nav {
 }
 
 @media only screen and (max-width: 640px) {
-  body {
+  nav {
+    display: block;
   }
+
+  .side-bar {
+    display: none;
+  }
+
 
   .bio-box {
     padding: 80px 20px 10px 20px;
@@ -961,8 +997,8 @@ nav {
 
   .navbar-item {
     margin: auto;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .navbar-item-logo {
@@ -970,8 +1006,8 @@ nav {
     margin: auto;
     top: 0px;
     left: 0px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
     width: 50px;
     display: flex;
     justify-content: center;
@@ -990,6 +1026,14 @@ nav {
   .navbar-heading:hover {
     color: rgb(32, 32, 32);
     transform: translate(0, -2px) !important;
+  }
+
+  #dropdown-btn:hover, #dropdown-btn:active {
+    cursor: default;
+  }
+
+  #dropdown-btn:hover, #dropdown-btn:active ~ .dropdown-content {
+    display: block !important;
   }
 
 
