--- a/css/project.css
+++ b/css/project.css
@@ -378,6 +378,8 @@
   margin-bottom: 50px;
   text-align: center;
   font-family: 'Fira Sans', sans-serif;
+  font-style: normal;
+  margin-left: 0 !important;
   font-weight: 500;
   font-size: 48px;
 }
